--- a/src/dotnet/APIView/APIViewWeb/Client/css/pages/review.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/pages/review.scss
@@ -76,7 +76,6 @@
 
 .revision-info {
     display: inline-block;
-    /*font-size: 13px;*/
     padding-left: 5px;
 }
 
@@ -102,4 +101,7 @@
 
 .status-icon {
     font-size: 0.8em;
+}
+.revision-info:last-child {
+    margin-left: 17px;
 }
